fix(KUI-1205): Added Courseinfo endpoint to server and renamed
