# server/server.js
@@ -138,7 +138,7 @@ addPaths(
 const authByApiKey = passport.authenticate('apikey', { session: false })
 
 // Application specific API enpoints
-const { SellingInfo, ImageInfo, CourseWebLink } = require('./controllers')
+const { SellingInfo, ImageInfo, CourseWebLink, CourseInfo } = require('./controllers')
 const { ApiRouter } = require('kth-node-express-routing')
 const apiRoute = ApiRouter(authByApiKey)
 const paths = getPaths()
@@ -157,6 +157,9 @@ apiRoute.register(paths.api.getUploadedImagesNames, SellingInfo.getUploadedImage
 apiRoute.register(paths.api.postImageInfo, ImageInfo.postImageInfo)
 // postCourseWebLink
 apiRoute.register(paths.api.postCourseWebLink, CourseWebLink.postCourseWebLink)
+
+// putCourseInfo
+apiRoute.register(paths.api.putCourseInfoByCourseCode, CourseInfo.putCourseInfoByCourseCode)
 
 server.use('/', apiRoute.getRouter())
 
